public/lite/api/en/r1.6/_sources/generate/program_listing_file_include_core_utils_ms_utils.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _program_listing_file_include_core_utils_ms_utils.h:

Program Listing for File ms_utils.h
===================================

|exhale_lsh| :ref:`Return to documentation for file <file_include_core_utils_ms_utils.h>` (``include/core/utils/ms_utils.h``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: cpp

   
   #ifndef MINDSPORE_CORE_UTILS_MS_UTILS_H_
   #define MINDSPORE_CORE_UTILS_MS_UTILS_H_
   
   #include <memory>
   #include <utility>
   #include <string>
   #include <vector>
   #include <atomic>
   #include <thread>
   
   #define DISABLE_COPY_AND_ASSIGN(ClassType) \
     ClassType(const ClassType &) = delete;   \
     ClassType &operator=(const ClassType &) = delete;
   
   #define TRY_AND_CATCH_WITH_EXCEPTION(expr, error_msg)                               \
     do {                                                                              \
       try {                                                                           \
         (expr);                                                                       \
       } catch (const std::exception &e) {                                             \
         MS_LOG(EXCEPTION) << "Caught exception of " << e.what() << ". " << error_msg; \
       }                                                                               \
     } while (0)
   
   namespace mindspore {
   namespace common {
   inline const char *SafeCStr(const std::string &str) { return str.c_str(); }
   const char *SafeCStr(const std::string &&str);
   
   static inline std::string GetEnv(const std::string &envvar) {
     const char *value = std::getenv(envvar.c_str());
   
     if (value == nullptr) {
       return std::string();
     }
   
     return std::string(value);
   }
   
   static inline int SetEnv(const char *envname, const char *envvar, int overwrite = 1) {
   #if defined(_WIN32)
     return 0;
   #else
     return ::setenv(envname, envvar, overwrite);
   #endif
   }
   
   static inline void SetOMPThreadNum() {
     const size_t kOMPThreadMaxNum = 16;
     const size_t kOMPThreadMinNum = 1;
     // The actor concurrent execution max num.
     const size_t kActorConcurrentMaxNum = 4;
   
     size_t cpu_core_num = std::thread::hardware_concurrency();
     size_t cpu_core_num_half = cpu_core_num / 2;
     // Ensure that the calculated number of OMP threads is at most half the number of CPU cores.
     size_t OMP_thread_num = cpu_core_num_half / kActorConcurrentMaxNum;
   
     OMP_thread_num = OMP_thread_num < kOMPThreadMinNum ? kOMPThreadMinNum : OMP_thread_num;
     OMP_thread_num = OMP_thread_num > kOMPThreadMaxNum ? kOMPThreadMaxNum : OMP_thread_num;
   
     std::string OMP_env = std::to_string(OMP_thread_num);
     (void)SetEnv("OMP_NUM_THREADS", OMP_env.c_str(), 0);
   }
   
   static inline bool IsLittleByteOrder() {
     uint32_t check_code = 0x12345678;
     auto check_pointer = reinterpret_cast<uint8_t *>(&check_code);
     uint8_t head_code = 0x78;
     if (check_pointer[0] == head_code) {
       return true;
     }
     return false;
   }
   
   static inline bool CheckUseMPI() {
     // If these OpenMPI environment variables are set, we consider this process is launched by OpenMPI.
     std::string ompi_command_env = GetEnv("OMPI_COMMAND");
     std::string pmix_rank_env = GetEnv("PMIX_RANK");
     if (!ompi_command_env.empty() && !pmix_rank_env.empty()) {
       return true;
     }
     return false;
   }
   
   template <typename T>
   inline bool IsEqual(const std::shared_ptr<T> &a, const std::shared_ptr<T> &b) {
     if (a == b) {
       return true;
     }
     if (a == nullptr || b == nullptr) {
       return false;
     }
     return *a == *b;
   }
   
   template <typename T>
   inline bool IsAttrsEqual(const T &a, const T &b) {
     if (&a == &b) {
       return true;
     }
     if (a.size() != b.size()) {
       return false;
     }
     auto iter1 = a.begin();
     auto iter2 = b.begin();
     while (iter1 != a.end()) {
       if (iter1->first != iter2->first) {
         return false;
       }
       if (!IsEqual(iter1->second, iter2->second)) {
         return false;
       }
       ++iter1;
       ++iter2;
     }
     return true;
   }
   }  // namespace common
   }  // namespace mindspore
   
   #endif  // MINDSPORE_CORE_UTILS_MS_UTILS_H_
